--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,14 +1,21 @@
 <h2>Signup</h2>
 
 <form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <label for="email">Email</label>
+  <input id="email" type="text" name="email" placeholder="Your email">
 
+  <br><br>
+
+  <label for="username">Username</label>
+  <input id="username" type="text" name="username" placeholder="Your name">
+  <br>
+  
   <br><br>
 
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
   <br>
+
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
