--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* #default-profile-picture{
+  height: 500px;
+  width: 500px;
+
+} */
+
+#picture-holder{
+  height: 100px;
+  width: 100px;
+  background-color: grey;
+  
+}
+
