--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,7 @@
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
     <a href="/auth/logout">Logout</a>
+    <a href="/profile">Profile</a>
   </nav>
 
   {{{body}}}
