--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div class="container">
+    <button id="findMatch"><a href="/auth/login">Login</a></button>
+    <button id="find"><a href="/auth/signup">Sign up</a></button>
+</div>
