Update code match routes and vies

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,10 @@
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
     <a href="/auth/logout">Logout</a>
+
+
+  <a href="/player">Player</a>
+  <a href="/confirm">Confirm</a>
   </nav>
 
   {{{body}}}
