no changes done

--- a/views/user/profile-edit.hbs
+++ b/views/user/profile-edit.hbs
@@ -19,7 +19,7 @@
 
   <label>Team </label>
   <select name="team">
-  <option>WeWork</option>
+  <option>{{user.team}}</option>
   </select>
   <br>
 
