--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,8 +18,7 @@
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
     <a href="/auth/logout">Logout</a>
-    <a href="/player">Player</a>
-    <a href="/confirm">Confirm</a>
+    <a href="/match">Match</a>
     <a href="/profile">Profile</a>
   </nav>
 
