--- a/views/match/player.hbs
+++ b/views/match/player.hbs
@@ -1,24 +1,26 @@
 <h2>Player</h2>
 
 <div>
-  <p>Your playground: {{tableData}}</p>
+  <p>Your playground: {{tableData.address}}</p>
 </div>
 
 <div>
   <h3>Choose your opponent</h3>
 
   <p>I know who I want to play:</p>
-  <form action="/confirm/direct" method="POST">
+  <p>Just type in the username of your frenemy and let the game begin:</p>
+  <form action="/match/{{tableData._id}}/direct" method="POST">
   <input type="text" name="directOpponent" placeholder="Put in username of your opponent">
   <button type="submit">Select opponent</button>
   </form>
 
 <br>
-<p>OR</p>
+<h2>OR</h2>
 <br>
 
   <p>Are you up for a new challenge?</p>
-  <form action="/confirm/random" method="POST">
+  <p>Let us choose a random opponent for your next game:</p>
+  <form action="/match/{{tableData._id}}/random" method="POST">
   <input type="text" name="randomOpponent" value={{randomName}}>
   <button type="submit">Select opponent</button>
   </form>
