Good morning, changes from yesterday, match views and routes and maps

--- a/views/match/table.hbs
+++ b/views/match/table.hbs
@@ -1,5 +1,7 @@
 <h2>Choose your playground</h2>
 
+<div id="map"></div>
+
 {{#each tableData}}
 <p>Address: {{this.address}} </p>
 <p>Team: {{this.team}}</p>
