--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -8,3 +8,9 @@
     <button><a href="/profile">Profile</a></button>
 </div>
 
+{{!-- <div>
+    <br><br><br>    
+   <label name="pendingrequest">Here the number of pending matches should show: </label> 
+    <p name="user-score">{{}}</p>
+</div> --}}
+
