--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,9 @@
     <a href="/pending-invite">Pending request</a>
     <a href="/open-games">Open games</a>
     <a href="/profile">Profile</a>
+    <a href="/profile-overview">Profile Overview</a>
+    <a href="/highscores">Highscores</a>
+    <a href="/rules">Rules</a>
     <a href="/auth/logout">Logout</a>
     {{else}}
     <a href="/auth/login">Login</a>
@@ -35,17 +38,16 @@
   {{!-- Google API tag --}}
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUeQXCyJDlhOtCB8JwWAk8zCxpjk6k-jo"></script>
   {{!-- Axios tag --}}
-   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  {{!-- Bootstrap js --}}
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   {{!-- Own js --}}
-   <script src="/javascripts/main.js"></script>
-   <script src="/javascripts/script.js"></script>
+  <script src="/javascripts/main.js"></script>
+  <script src="/javascripts/handler.js"></script>
+  <script src="/javascripts/script.js"></script>
 </body>
 
 </html>
