--- a/views/user/profile-overview.hbs
+++ b/views/user/profile-overview.hbs
@@ -2,26 +2,20 @@
 
 <p>Find out who's playing in your team or a team closeby!</p>
 
-{{!-- <form action="/profile-overview" method="POST">
-  <select name="overviewFilter">
-    <option>"wework, Potsdamer Platz"</option>
-    <option>"wework, at Atrium Tower"</option>
+<form>
+  <select id="overviewFilter" name="overviewFilter">
+    <option></option>
+    <option>wework, Potsdamer Platz</option>
+    <option>wework, at Atrium Tower</option>
   </select>
-  <input type="submit" value="apply filter">
+  <button>apply filter</button>
 </form>
 
-{{#if isfilterCriteria}} --}}
+<br><br>
+
 {{#each userData}}
 <img src="{{this.imgPath}}" alt="profilePicture">
 <p>Name: {{this.username}}</p>
 <p>Team: {{this.team}}</p>
 <br><br>
 {{/each}}
-{{!-- {{else}}
-{{#each userData}}
-<img src="{{this.imgPath}}" alt="profilePicture">
-<p>Name: {{this.username}}</p>
-<p>Team: {{this.team}}</p>
-<br><br>
-{{/each}}
-{{/if}} --}}
