--- a/views/highscores.hbs
+++ b/views/highscores.hbs
@@ -7,6 +7,7 @@
     <tr>
       <th>Username</th>
       <th>Team</th>
+      <th>Level</th>
       <th>Score</th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
     <tr>
       <td>{{this.username}}</td>
       <td>{{this.team}}</td>
+      <td>{{this.level}}</td>
       <td>{{this.points}}</td>
     </tr>
     {{/each}}
