--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,6 +1,13 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
+<div>
+    <br>
+    <p name="user-score">Pending requests:{{pendingNumber}}</p>
+    <p name="user-score">Number of open games: {{openNumber}}</p>
+    <br>
+</div>
+
 <div class="container">
     <button><a href="/match">Find a match</a></button>
     <button><a href="/pending-invite">Pending request</a></button>
@@ -8,12 +15,4 @@
     <button><a href="/profile">Profile</a></button>
 </div>
 
-<div>
-    <br><br><br>    
-   <label name="pendingrequest"> Pending requests: </label> 
-    <p name="user-score">{{pendingNumber}}</p>
-
-    <label name="pendingrequest"> Number of open games: </label> 
-    <p name="user-score">{{openNumber}}</p>
-</div>
 
