--- a/views/match/pending-invite.hbs
+++ b/views/match/pending-invite.hbs
@@ -3,12 +3,12 @@
 {{test}}
 
 <br><br>
-  {{#each matchData}}
+{{#each matchData}}
 <p>You have an invite from: {{this._player1.username}}</p>
-  <br>
+<p>Where: {{this._table.address}}</p>
 
-  <p>Message from oponent: {{this.message}}</p>  
-  <br><br>
+<p> Message from opponent: {{this.message}}</p>  
+<br><br>
 
 <form action="/pending-invite/decline/{{this._id}}" method="POST">
 <input type="submit" value="Decline Match">
