Awesome mcawesome town words lissom

--- a/views/match/confirm.hbs
+++ b/views/match/confirm.hbs
@@ -28,4 +28,12 @@
 
 <button type="submit">It's on</button>
 
+<div>
+<br>
+  {{#if message }}
+  <div class="error-message">{{ message }}</div>
+  {{/if}}
+<br>
+</div>
+
 </form>
