--- a/views/user/profile-overview.hbs
+++ b/views/user/profile-overview.hbs
@@ -3,7 +3,7 @@
 <p>Find out who's playing in your team or a team closeby!</p>
 
 <form>
-  <select id="overviewFilter" name="overviewFilter">
+  <select name="overviewFilter">
     <option></option>
     <option>wework, Potsdamer Platz</option>
     <option>wework, at Atrium Tower</option>
