Your commit message

--- a/views/rules.hbs
+++ b/views/rules.hbs
@@ -1,1 +1,20 @@
-<h2>The rules</h2>
+<br>
+<h2>How it works</h2>
+<br>
+<p> <strong>01. The app</strong> <br> 
+Choose your opponent and set a match. if you know who you want to challenge, just type in the username.
+But wait, are you feeling adventurous today? in that case, go for a random opponent, we will select it for you.
+Send a match request, wait for a confirmation, and you are set to rock that game. 
+
+<br><br>
+
+<p> <strong>02. The Score</strong> <br> 
+In open games you can update the score of your open games. You should have a point for every match won.  
+<br><br>
+
+<p> <strong>03. The game</strong> <br> 
+The winner of a game is the first to 11 points. 
+About serving, a player takes two serves before 
+the ball switches to the opponent to serve, except 
+during periods of extra play where it changes each time. 
+</p>
