Good morning, update open games route

--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -6,19 +6,19 @@
 </div><br>
 
 <div>
- <label>Username:</label><p name="username"> {{user.username}} </p>
-  <br>
+<label>Username:</label><p name="username"> {{user.username}} </p>
+<br>
 
-   <label>Team:</label><p name="team"> {{user.team}} </p>
-  <br>
+<label>Team:</label><p name="team"> {{user.team}} </p>
+<br>
 
-   <label>Level:</label><p name="level"> {{user.level}} </p>
-   <br>
+<label>Level:</label><p name="level"> {{user.level}} </p>
+<br>
 
+<label>Points:</label><p name="level"> {{user.points}} </p>
+<br>
 
 </div>
-
-{{!-- <button type="submit">Edit profile</button> --}}
 
 <form action="/profile-edit">
   <input type="submit" value="Edit profile">
