--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #C6D9C5;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -20,5 +21,37 @@ a {
 p {
   margin: 0; 
 }
+
+.homepage-buttons{
+  background-color: white;
+  width: 566px;
+  height: 268px;
+}
+
+.front-page-links{
+  margin: 20;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.btn{
+  background-color: white;
+  width: 566px;
+  height: 268px;
+}
+
+.heihei{
+ display: block;
+
+}
+
+a:hover{
+  background-color: #F5FFF4;
+  text-decoration: none;
+}
+
+
+
 
 
