--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,8 +15,55 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+    
+  <a class="navbar-brand" href="homepage"><img src="/images/pingPong.png" id="logo"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="match">Schedule match</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="pending-invite">Match requests</a>
+      </li>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="open-games">Ongoing games</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="profile">Profile</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Things im to afraid to remove for now
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+       {{#if isConnected}}
+    <a href="/homepage">Home</a>
+    <a href="/match">Find a match</a>
+    <a href="/pending-invite">Pending request</a>
+    <a href="/open-games">Open games</a>
+    <a href="/profile">Profile</a>
+    <a href="/profile-overview">Profile Overview</a>
+    <a href="/highscores">Highscores</a>
+    <a href="/auth/logout">Logout</a>
+    {{else}}
+    <a href="/rules">Rules</a>
+    <a href="/auth/login">Login</a>
+    <a href="/auth/signup">Sign up</a>
+    {{/if}}
+        </div>
+      </li>
+     
+    </ul>
+  </div>
+</nav>
+    
+  {{!-- <nav>
     {{#if isConnected}}
     <a href="/homepage">Home</a>
     <a href="/match">Find a match</a>
@@ -31,7 +78,7 @@
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Sign up</a>
     {{/if}}
-  </nav>
+  </nav> --}}
 
 
   {{{body}}}
