--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,39 +1,29 @@
 {{!-- <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p> --}}
 
-<div class="front-page-links">
+<div class="front-page-links d-flex">
+    <div class="justify-content-center flex-row">
 
-    <div class="schedule-match-button">
-        <button class="homepage-buttons"><a href="/match">Schedule match</a></button>
+    <div>
+        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
-    <div class="pending-invite-button">
-        
-        {{!-- <button class="homepage-buttons"><a href="/pending-invite">Match requests</a></button> --}}
-    </div>  
-    <div class="open-game-button">
-        <button class="homepage-buttons"><a href="/open-games">Ongoing matches</a></button>
+    <div>
+        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
-    <div class="profile-button">
-        <button class="homepage-buttons"><a href="/profile">Profile</a></button>
+    <div>
+        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
-</div>
+    <div>
+        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+    </div>
+    </div>
 
-
+    </div>
 <div>
-    <br>
+<br><br>
     <p name="user-score">Pending requests:{{pendingNumber}}</p>
     <p name="user-score">Number of open games: {{openNumber}}</p>
     <br>
 </div>
     
 </body>
-
-<div class="myBox">
-  blah blah blah.
-  <a href="http://google.com">link</a>
-</div>
-
-
-<button type="button" class="btn"><a href="/pending-invite" class="heihei">Pending invites</a></button>
-<button type="button" class="btn"><a href="/pending-invite">Pending invites</a></button>
-
