--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,8 @@ a {
   color: #00B7FF;
 }
 
+/* Making the photos in profile and profile-edit to 
+become the same size */
 #default-profile-picture{
   height: 8%;
   width: 8%;
@@ -18,38 +20,34 @@ a {
   height: 400px;
 }
 
+/* This was here as default */
 p {
   margin: 0; 
 }
 
-.homepage-buttons{
-  background-color: white;
-  width: 566px;
-  height: 268px;
-}
-
+/* Do not touch
 .front-page-links{
   margin: 20;
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
+} */
 
+/* Setting the button background to white
+  button width: 566px, height: 268px;
+*/
 .btn{
   background-color: white;
   width: 566px;
-  height: 268px;
+  height: 58px;
 }
 
-.heihei{
- display: block;
-
+/* Sets the hoover color */
+#buttontohover:hover{
+  background-color:#FFF8DB;
 }
 
-a:hover{
-  background-color: #F5FFF4;
-  text-decoration: none;
-}
+
 
 
 
