--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
     
   <a class="navbar-brand" href="homepage"><img src="/images/pingPong.png" id="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
