--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -8,13 +8,13 @@
         <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
     <div>
-        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="/match"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
     <div>
-        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="/open-games"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
     <div>
-        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="/profile"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
     </div>
     </div>
 
