correct links and naming

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -4,17 +4,17 @@
 <div class="front-page-links d-flex">
     <div class="justify-content-center flex-row">
 
+    <div class = >
     <div>
-        <a href="/pending-invite"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="match"><button type="button" id="buttontohover" class="btn">Schedule match</button></a>
+    </div>
+        <a href="pending-invite"><button type="button" id="buttontohover" class="btn">Match request</button></a>
     </div>
     <div>
-        <a href="/match"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="open-games"><button type="button" id="buttontohover" class="btn">Ongoing games</button></a>
     </div>
     <div>
-        <a href="/open-games"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
-    </div>
-    <div>
-        <a href="/profile"><button type="button" id="buttontohover" class="btn">Pending invites</button></a>
+        <a href="profile"><button type="button" id="buttontohover" class="btn">Profile</button></a>
     </div>
     </div>
 
