--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,7 @@
     crossorigin="anonymous">
   {{!-- Own CSS --}}
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/style1.css" />
 </head>
 
 <body>
