--- a/views/rules.hbs
+++ b/views/rules.hbs
@@ -1,6 +1,7 @@
 <br>
 <h2>How it works</h2>
 <br>
+<div id="rules">
 <p> <strong>01. The app</strong> <br> 
 Choose your opponent and set a match. if you know who you want to challenge, just type in the username.
 But wait, are you feeling adventurous today? in that case, go for a random opponent, we will select it for you.
@@ -9,7 +10,7 @@ Send a match request, wait for a confirmation, and you are set to rock that game
 <br><br>
 
 <p> <strong>02. The Score</strong> <br> 
-In open games you can update the score of your open games. You should have a point for every match won.  
+In open games you can update the score of your played games. You should submit a point for every match won.  
 <br><br>
 
 <p> <strong>03. The game</strong> <br> 
@@ -18,3 +19,4 @@ About serving, a player takes two serves before
 the ball switches to the opponent to serve, except 
 during periods of extra play where it changes each time. 
 </p>
+</div>
