--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,6 +1,7 @@
 <br>
 <h1>Profile page</h1>
 
+<div class="profile-page">
 <div id="picture-holder">
   <img src={{user.imgPath}} id="default-profile-picture" alt="user-image">
 </div><br>
@@ -23,3 +24,5 @@
 <form action="/profile-edit">
   <input type="submit" value="Edit profile">
 </form>
+
+</div>
