--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,12 +8,6 @@ a {
   color: #00B7FF;
 }
 
-  /* #divider{
-    padding-bottom: 1px;
-    width:auto;
-    display:inline-block;
-} */
-
 #map {
   width: 100%;
   height: 400px;
@@ -29,35 +23,18 @@ p {
 */
 .btn{
   background-color: white;
-  width: 90%;
+  border-radius: 0px;
+}
+
+.btn-hp{
+  width: 300px;
   height: 58px;
+  margin: 0.5em 0.5em;
 }
 
 /* Sets the hoover color */
 #buttontohover:hover{
   background-color:#FFF8DB;
-}
-
-#buttontohover{
-  margin: 3% auto;
-  width: 200%;
-}
-
-/* centers text in buttons at homepage
-have margin left */
-/* .container-homepage{
-  margin: 3% auto;
-  text-align: center;
-  margin-left: 5%;
-  margin-right: 5% 
-} */
-
-#all-homepage-content{
-  margin-left: 7%;
-}
-
-#homepage-points{
-  align-items: center;
 }
 
 #picture-holder{
