--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      {{#if isConnected}}
       <li class="nav-item">
         <a class="nav-link" href="match">Schedule match</a>
       </li>
@@ -43,19 +44,20 @@
           Things im to afraid to remove for now
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-       {{#if isConnected}}
-    <a href="/homepage">Home</a>
-    <a href="/match">Find a match</a>
-    <a href="/pending-invite">Pending request</a>
-    <a href="/open-games">Open games</a>
-    <a href="/profile">Profile</a>
-    <a href="/profile-overview">Profile Overview</a>
-    <a href="/highscores">Highscores</a>
-    <a href="/auth/logout">Logout</a>
-    {{else}}
-    <a href="/rules">Rules</a>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/signup">Sign up</a>
+          <a href="/homepage">Home</a>
+          <a href="/profile-overview">Profile Overview</a>
+          <a href="/highscores">Highscores</a>
+          <a href="/rules">Rules</a>
+          <a href="/auth/logout">Logout</a>
+      {{else}}
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Things im to afraid to remove for now
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a href="/rules">Rules</a>
+          <a href="/auth/login">Login</a>
+          <a href="/auth/signup">Sign up</a>
     {{/if}}
         </div>
       </li>
