--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,28 +1,24 @@
 {{!-- <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p> --}}
-<div class="container-homepage d-flex ">
-<div class="justify-content-center flex-column" id="all-homepage-content">
+<div class="d-flex justify-content-center flex-wrap">
     
-
     <div>
-        <a href="match"><button type="button" id="buttontohover" class="btn">Schedule match</button></a>
+        <a href="match"><button type="button" id="buttontohover" class="btn btn-hp">Schedule match</button></a>
     </div>
     <div>
-        <a href="pending-invite"><button type="button" id="buttontohover" class="btn buttontohover">Match request</button></a>
+        <a href="pending-invite"><button type="button" id="buttontohover" class="btn btn-hp">Match request</button></a>
     </div>
     <div>
-        <a href="open-games"><button type="button" id="buttontohover" class="btn">Ongoing games</button></a>
+        <a href="open-games"><button type="button" id="buttontohover" class="btn btn-hp">Ongoing games</button></a>
     </div>
     <div>
-        <a href="profile"><button type="button" id="buttontohover" class="btn">Profile</button></a>
+        <a href="profile"><button type="button" id="buttontohover" class="btn btn-hp">Profile</button></a>
     </div>
-
     
 </div>
-</div>
 
-<div"container-points d-flex" id="homepage-points">
-<div class="justify-content-center flex-column" >
+<div"container-points d-flex">
+<div class="justify-content-center flex-column align-items-center" >
 
 <br><br>
     <p name="user-score">Pending requests:{{pendingNumber}}</p>
