--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,13 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="index-welcome">
+    <p>Welcome to</p>
+    <h1>{{title}}</h1>
+    <p class="indexText">
+        The app that helps you keep track of your ping pong success story. <br>
+        Just choose an opponent, schedule a match and rock that game!
+    </p>
+</div>
 
-<div class="container">
-    <button><a href="/auth/signup">Sign up</a></button>
-    <button><a href="/auth/login">Login</a></button>
+<div class="index d-flex flex-column justify-content-center align-items-center ">
+    <button class="btn btn-index" id="buttontohover"><a class="table-link" href="/auth/signup">Sign up</a></button>
+    <button class="btn btn-index" id="buttontohover"><a class="table-link" href="/auth/login">Login</a></button>
 </div>
