--- a/views/match/player.hbs
+++ b/views/match/player.hbs
@@ -1,28 +1,33 @@
-<h2>Choose your oppontent</h2>
-
-<div>
-  <p>Your playground: {{tableData.address}}</p>
+<div class ="chosenTable">
+  <p><strong>Your playground: </strong><br>
+    {{tableData.address}}</p>
 </div>
 
-<div>
+<h2>Now choose your opponent:</h2>
+
+<div class ="textboxOpponent" >
 
   <p><strong>I know who I want to play:</strong></p>
+  <hr class="line-player">
   <p>Just type in the username of your frenemy and let the game begin:</p>
-  <form action="/match/{{tableData._id}}/direct" method="POST">
-  <input type="text" name="directOpponent" placeholder="Put in username of your opponent">
-  <button type="submit">Select opponent</button>
+  <form class="formPlayer" action="/match/{{tableData._id}}/direct" method="POST">
+  <input class="inputPlayer" type="text" name="directOpponent" placeholder="Put in username of your opponent">
+  <button class="btn btn-player" id="buttontohover" type="submit">Select opponent</button>
   </form>
 
-<br>
-<h2>OR</h2>
-<br>
+</div>
+
+<h2>or</h2>
+
+<div class = "textboxOpponent" >
 
   <p><strong>Are you up for a new challenge?</strong></p>
-  <p>Let us choose a random opponent for your next game:</p>
-  <form action="/match/{{tableData._id}}/random" method="POST">
-  <input type="hidden" name="randomOpponent" value={{randomName}}>
-  <p>{{randomName}}</p>
-  <button type="submit">Select opponent</button>
+  <hr class="line-player">
+  <p>We have chosen a random opponent for your next game for you:</p>
+  <form class="formPlayer" action="/match/{{tableData._id}}/random" method="POST">
+  <input  class="inputPlayer" type="hidden" name="randomOpponent" value={{randomName}}>
+  <p><strong>{{randomName}}</strong></p>
+  <button class="btn btn-player" id="buttontohover" type="submit">Select opponent</button>
   </form>
 
 </div>
