--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,5 +1,4 @@
-{{!-- <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p> --}}
+Welcome {{user.username}}
 <div class="d-flex justify-content-center flex-wrap">
     
     <div>
@@ -17,14 +16,12 @@
     
 </div>
 
-<div"container-points d-flex">
-<div class="justify-content-center flex-column align-items-center" >
+<div class="d-flex justify-content-center flex-wrap">
 
 <br><br>
-    <p name="user-score">Pending requests:{{pendingNumber}}</p>
-    <p name="user-score">Number of open games: {{openNumber}}</p>
+    <p name="user-score" class="pending-req">Pending requests:{{pendingNumber}}</p>
+    <p name="user-score" class="nbof-open-games">Number of open games: {{openNumber}}</p>
     <br>
-</div>
 </div>
 
 <div>
