--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,25 +1,32 @@
 
 <h2>Login</h2>
 
+<div class="signup-container d-flex justify-content-center">
+<div class="signupfields">
+
 <form action="/auth/login" method="POST" id="form-container">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <input id="username" type="text" name="username" placeholder="Kim Pong-un">
 
-  <br><br>
+  <br>
 
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
   <br>
+
+</div>
+</div>
+
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <br><br>
+  <br>
 
-  <button>Login</button>
+  <button class="btn btn-login d-flex justify-content-center" id="buttontohover">Login</button>
 
-  <p class="account-message">
+  <p class="account-message d-flex justify-content-center">
     Don't have an account yet?
-    <a href="/auth/signup">Signup</a>
+    <a class="signup-link" href="/auth/signup">Signup</a>
   </p>
 </form>
